tooling/nargo_cli/tests/snapshots/execution_success/while_loop_break_regression_8521/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
unconstrained fn main(x: u32) -> pub str<3> {
    let mut idx_b: Field = 0;
    while true {
        if idx_b == 0 {
            break;
        } else {
            idx_b = idx_b + 1;
            let c: u32 = 5 / x;
            println(c);
        }
    }
    "SQF"
}
